# HW2_Django

./: README.md  catalog.json  catalog2.json  catalog3.json  catalog4.json  groups.json  pyproject.toml
articles/: models.py  urls.py  views.py
articles/templates/articles/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: custom_command.py
catalog/migrations/: 0004_version.py  0005_alter_version_options_remove_version_product_and_more.py  0006_alter_version_product_name.py  0007_product_creator.py  0008_alter_product_options_product_is_publication.py  0009_alter_product_is_publication.py
catalog/templates/: contacts.html  home.html  product_detail.html  products_list.html
catalog/templates/catalog/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: nav_bar.html
catalog/templates/includes/: nav_bar.html
config/: settings.py  urls.py
product/photo/: Без_названия.jfif
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html  not_mail.html
users/templates/users/: not_mail.html  reset_password.html  user_form.html
