[tool.poetry]
name = "hw2-django"
version = "0.1.0"
description = ""
authors = ["Landers <il-travkin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
black = "^24.4.2"
pillow = "^10.4.0"
ipython = "^8.26.0"
django-stubs = "^5.0.2"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
